# bad-workspace

./: Cargo.toml  README.md
firmware/firmware-demo/: Cargo.toml  rust-toolchain.toml
firmware/firmware-demo/tests/: integration.rs
host/host-demo/: Cargo.toml
host/host-demo/src/: main.rs
shared/demo-share/: Cargo.toml
shared/demo-share/src/: lib.rs
