[package]
authors = ["James Munns <james@onevariable.com>"]
name = "firmware-demo"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
nrf52840-hal = "0.16"

[dependencies.demo-share]
path = "../../shared/demo-share"
default-features = false

[dev-dependencies]
defmt-test = "0.3"
